--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 scanPackage=com.zrs.spring.demo
 templateRoot=template
+
+pointCut=public .* com\.zrs\.spring\.demo\.service\..*ServiceImpl\..*\(.*\)
+aspectBefore=com.zrs.spring.formework.aspect.LogAspect before
+aspectAfter=com.zrs.spring.formework.aspect.LogAspect after
