--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ scanPackage=com.zrs.spring.demo
 templateRoot=template
 
 pointCut=public .* com\.zrs\.spring\.demo\.service\..*ServiceImpl\..*\(.*\)
-aspectBefore=com.zrs.spring.formework.aspect.LogAspect before
-aspectAfter=com.zrs.spring.formework.aspect.LogAspect after
+aspectBefore=com.zrs.spring.demo.aspect.LogAspect before
+aspectAfter=com.zrs.spring.demo.aspect.LogAspect after
